Minimal bindgen SDK bindings

--- a/pebblesdk-sys/Cargo.toml
+++ b/pebblesdk-sys/Cargo.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cty = { workspace = true }
+
+[build-dependencies]
 bindgen = { workspace = true }
+
+[package.metadata.docs.rs]
+targets = [
+  "thumbv7em-none-eabi",
+  "thumbv7m-none-eabi",
+]
