--- a/examples/hello-pebble/Cargo.toml
+++ b/examples/hello-pebble/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-pebblesdk-sys = { workspace = true }
+pebblesdk = { workspace = true }
 
 [[bin]]
 name = "hello-pebble"
