examples: Clean up "Hello, World" demo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-  "examples/hello-pebble",
+  "examples/hello-ferris",
   "pebblesdk",
   "pebblesdk-sys",
 ]
